# recuitment_product

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  logging_config.py  main.py  mypy.ini  pyproject.toml  rabbitmq.py  repository.py  setup.py  url_discovery_service.py
src/recruitment/common/: logging_config.py  rabbitmq.py  web_crawler.py
src/recruitment/db/: repository.py
src/recruitment/discovery/: service.py
src/recruitment/processing/: service.py
