[project]
name = "recruitment-product"
version = "0.1.0"
description = "This project is spun of project_recruitment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "googlesearch-python>=1.3.0",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "ruff>=0.11.10",
    "setuptools>=80.7.1",
    "tenacity>=9.1.2",
]
